<resources>
    <string name="app_name">Kalkulator Datar</string>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="kalkulator_luas_bangun_datar">Kalkulator Luas Bangun Datar</string>
    <string name="luas_peresgi">Luas Peresgi</string>
    <string name="luas_persegi_panjang">Luas Persegi Panjang</string>
    <string name="title_activity_luas_persegi">Luas Persegi</string>
    <string name="panjang">Panjang</string>
    <string name="lebar">Lebar</string>
    <string name="_0">0</string>
    <string name="hitung">Hitung</string>
    <string name="hasil_luas_persegi">Hasil Luas Persegi :</string>
    <string name="masukkan_panjang_sisi">Masukkan Panjang Sisi :</string>
</resources>
